<resources>
    <string name="app_name">JE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">S\'identifier</string>
    <string name="action_sign_in_short">S\'identifier</string>
    <string name="welcome">Bienvenue !</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit faire >5 caractères</string>
    <string name="login_failed">Identification échouée</string>
    <string name="home">Accueil</string>
    <string name="todo">À faire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filtrer</string>
    <string name="search">Recherche</string>
    <string name="ao">AO</string>
    <string name="add">Déposer un AO</string>
    <string name="close">Fermer</string>
    <string name="export">Exporter</string>
    <string name="company">Entreprise</string>
    <string name="client">Client</string>
    <string name="created">Date de la demande</string>
    <string name="deadline">Date limite</string>
    <string name="project">Fiche Projet</string>
    <string name="default_date">00-00-0000</string>
    <string name="description">Description</string>
    <string name="duration">x mois</string>
    <string name="company_type">PME</string>
    <string name="company_site">apple.com</string>
    <string name="project_description">Project Description</string>
    <string name="submit">Déposer</string>
    <string name="cancel">Annuler</string>
    <string name="company_name">Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="add_offer">Depot d’AO</string>
    <string name="client_name">Client Name</string>
    <string name="company_type_2">Company Type</string>
    <string name="company_site_url">google.com</string>
</resources>
