<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AddActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_mx"
            android:layout_marginRight="@dimen/layout_mx"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/appName"
            app:layout_constraintTop_toTopOf="@+id/appName"
            tools:showIn="@layout/activity_main">


            <ImageView
                android:id="@+id/addIcon"
                android:layout_width="17dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add"
                android:onClick="goToHomePage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clear_black_24dp"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="24dp" />

            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_offer"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="41dp"
                tools:layout_conversion_absoluteWidth="323dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_mx"
                android:layout_marginRight="@dimen/layout_mx"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/client"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/client"
                        android:textColor="@color/material_on_background_emphasis_high_type"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/addClientName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp" />


                    <EditText
                        android:id="@+id/addClientEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp" />

                    <EditText
                        android:id="@+id/addClientPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">


                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="198dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/company"
                        android:textColor="@color/material_on_background_emphasis_high_type"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/addCompanyName"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/addCompanyName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="1dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:hint="@string/company_name"
                        android:inputType="text"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/addLogo"
                        app:layout_constraintStart_toStartOf="parent" />


                    <ImageView
                        android:id="@+id/addLogo"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="openUpload"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/addCompanyName"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/ic_group_1"
                        tools:srcCompat="@drawable/ic_group_1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/expires"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deadline"
                        android:textAlignment="viewStart"
                        android:textColor="@color/material_on_background_emphasis_high_type"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/addExpiresAt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/deadline"
                        android:inputType="date"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/project"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/project"
                        android:textColor="@color/material_on_background_emphasis_high_type"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/addDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/project_description"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:minLines="8"
                        android:paddingLeft="8dp"
                        android:paddingTop="12dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="12dp"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <Button
                    android:id="@+id/saveAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="notImplemented"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/submit"
                    app:backgroundTint="#000000" />

                <Button
                    android:id="@+id/cancelAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="notImplemented"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/cancel"
                    android:textColor="#000000"
                    app:backgroundTint="#e5e5e5" />


            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>